--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -2,7 +2,7 @@
   height: 300px;
   color: white;
   padding-left: 150px;
-  background-color: #252a30;
+  background-color: #0000;
 }
 
 .home-content h2 {
